bug fix: the size of subscribe input on small screens

--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -94,7 +94,7 @@ footer .wrapper {
                 background-color: #99999977;
                 color: $bgWhite;
                 min-height: 35px;
-                max-width: 180px;
+                width: 80%;
             }
             
             button {
