--- a/styles/sass/partials/_media_queries.scss
+++ b/styles/sass/partials/_media_queries.scss
@@ -64,10 +64,6 @@
             width: 80%;
             flex-basis: 30%;
         }
-
-        .subscribe input[type=email] {
-            min-width: 300px;
-        }
     }
 }
 
@@ -247,10 +243,6 @@
                 margin: 20px auto;
                 width: 100%;
                 flex-basis: 30%;
-            }
-
-            .subscribe input[type=email] {
-                min-width: 280px;
             }
         }
         
